TEST_PROGRAMS/VALID/05/top_var_int_single_no_init_type.go
/* Types. */

package main
   
var a int
   
func main() {
	//x = 1
}
