TEST_PROGRAMS/INVALID/04/99.go
package main

func main() {
    var x = 2

    switch { //Invalid case (no colon)
      case a x++
    }


}
